src/core/generator/tests/snapshots/json_to_config_spec__boolean.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  userStatus(p1: Int!): Boolean @http(baseURL: "https://example.com", path: "/user/{{.args.p1}}/online")
}
