src/core/generator/tests/snapshots/json_to_config_spec__create_post.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  mutation: Mutation
}

input T2 {
  body: String
  id: Int
  title: String
  userId: Int
}

type Mutation {
  f1(f1Input: T2): T1 @http(baseURL: "https://jsonplaceholder.typicode.com", body: "{{.args.f1Input}}", method: "POST", path: "/posts")
}

type T1 {
  body: String
  id: Int
  title: String
  userId: Int
}
