src/core/generator/tests/snapshots/json_to_config_spec__create_product.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  mutation: Mutation
}

input GEN__2 {
  category: String
  description: String
  image: String
  price: Int
  title: String
}

type GEN__1 {
  category: String
  description: String
  id: Int
  image: String
  price: Int
  title: String
}

type Mutation {
  createProduct(GEN__Input1: GEN__2): GEN__1 @http(baseURL: "https://fakestoreapi.com", body: "{{.args.GEN__Input1}}", method: "POST", path: "/products")
}
