src/core/generator/tests/snapshots/json_to_config_spec__create_user.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  mutation: Mutation
}

input GEN__2 {
  email: String
  name: String
  phone: String
  username: String
  website: String
}

type GEN__1 {
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}

type Mutation {
  createPost(GEN__Input1: GEN__2): GEN__1 @http(baseURL: "https://jsonplaceholder.typicode.com", body: "{{.args.GEN__Input1}}", method: "POST", path: "/posts")
}
