src/core/generator/tests/snapshots/json_to_config_spec__generate_auth_token.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  mutation: Mutation
}

input GEN__2 {
  expiresInMins: Int
  password: String
  username: String
}

type GEN__1 {
  email: String
  firstName: String
  gender: String
  id: Int
  image: String
  lastName: String
  refreshToken: String
  token: String
  username: String
}

type Mutation {
  login(GEN__Input1: GEN__2): GEN__1 @http(baseURL: "https://dummyjson.com", body: "{{.args.GEN__Input1}}", method: "POST", path: "/auth/login")
}
