src/core/generator/tests/snapshots/json_to_config_spec__list_incompatible_object.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  inCompatibleObjects: [JSON] @http(baseURL: "https://example.com", path: "/api/v2/users")
}
