src/core/generator/tests/snapshots/json_to_config_spec__nested_list.json.snap
---
source: src/core/generator/tests/json_to_config_spec.rs
expression: cfg.to_sdl()
---
schema @server @upstream {
  query: Query
}

type GEN__1 {
  age: Int
  name: String
}

type GEN__2 {
  age: Int
  children: [GEN__1]
  name: String
}

type GEN__3 {
  people: [GEN__2]
}

type Query {
  nestedUsers(children: Boolean): GEN__3 @http(baseURL: "https://example.com", path: "/users", query: [{key: "children", value: "{{.args.children}}"}])
}
